--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/5.jpg"
+                  src="assets/img/portfolio/05.jpg"
                   alt="..."
                 />
               </a>
@@ -382,7 +382,7 @@
               <a
                 class="portfolio-link"
                 data-bs-toggle="modal"
-                href="#portfolioModa10"
+                href="#portfolioModal10"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -527,7 +527,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/3.jpg"
+                  src="assets/img/portfolio/15.png"
                   alt="..."
                 />
               </a>
@@ -620,7 +620,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-lg-4 col-sm-6 mb-4">
             <!-- Portfolio item 19-->
             <div class="portfolio-item">
@@ -744,7 +743,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/5.jpg"
+                  src="assets/img/portfolio/22.jpg"
                   alt="..."
                 />
               </a>
@@ -1068,7 +1067,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-4 text-lg-start">
-            Copyright &copy; Your Website 2023
+            Copyright &copy; Classico-Z 2023
           </div>
           <div class="col-lg-4 my-3 my-lg-0">
             <a
@@ -1135,7 +1134,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1172,7 +1171,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 02</p>
+                  <p>Gede Suindria 02</p>
                   <a href="blog (1).html#no2">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1180,7 +1179,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1217,7 +1216,7 @@
                     src="assets/img/portfolio/3.jpg"
                     alt="..."
                   />
-                  <p>artikel menarik dan actual.</p>
+                  <p>I Gede Eva Suardana 03</p>
                   <a href="blog (1).html#no3">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1225,7 +1224,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1262,7 +1261,7 @@
                     src="assets/img/portfolio/4.jpg"
                     alt="..."
                   />
-                  <p>artikel menarik dan actual.</p>
+                  <p>I Gede Putra Sandya Yudha 04</p>
                   <a href="blog (1).html#no4">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1270,7 +1269,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1304,10 +1303,10 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/5.jpg"
+                    src="assets/img/portfolio/05.jpg"
                     alt="..."
                   />
-                  <p>artikel menarik dan actual.</p>
+                  <p>Kadek Bintang Januarta 05</p>
                   <a href="blog (1).html#no5">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1315,7 +1314,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1352,7 +1351,7 @@
                     src="assets/img/portfolio/6.jpg"
                     alt="..."
                   />
-                  <p>Nama</p>
+                  <p>Kadek Budi Syarsi 06</p>
                   <a href="blog (1).html#no6">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1360,7 +1359,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1397,7 +1396,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Kadek Canda Pratiwi 07</p>
                   <a href="blog (1).html#no7">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1405,7 +1404,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1442,7 +1441,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Kadek Devi Meinesa 08</p>
                   <a href="blog (1).html#no8">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1450,7 +1449,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1487,7 +1486,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Kadek Riski 09</p>
                   <a href="blog (1).html#no9">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1495,7 +1494,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1532,7 +1531,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Kadek Widiastini 10</p>
                   <a href="blog (1).html#no10">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1540,7 +1539,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1577,7 +1576,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ketut Budi Arta Ningsih 11</p>
                   <a href="blog (1).html#no11">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1585,7 +1584,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1622,7 +1621,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Komang Arsina 12</p>
                   <a href="blog (1).html#no12">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1630,7 +1629,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1667,7 +1666,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Komang Puja Putri Gayatri 13</p>
                   <a href="blog (1).html#no13">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1675,7 +1674,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1712,7 +1711,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Komang Sutini 14</p>
                   <a href="blog (1).html#no14">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1720,7 +1719,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1754,10 +1753,10 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/15.png"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ni Kadek Eva Apriliani 16</p>
                   <a href="blog (1).html#no15">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1765,7 +1764,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1802,7 +1801,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ni Kadek Indah Mahayoni 17</p>
                   <a href="blog (1).html#no16">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1810,7 +1809,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1847,7 +1846,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ni Ketut Wardani 18</p>
                   <a href="blog (1).html#no17">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1855,7 +1854,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1892,7 +1891,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ni Made Puspa Darmayanti 19</p>
                   <a href="blog (1).html#no18">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1900,7 +1899,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1937,7 +1936,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ni Made Yuli 20</p>
                   <a href="blog (1).html#no19">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -1945,7 +1944,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -1958,7 +1957,7 @@
     <!-- Portfolio item 20 modal popup-->
     <div
       class="portfolio-modal modal fade"
-      id="portfolioModa20"
+      id="portfolioModal20"
       tabindex="-1"
       role="dialog"
       aria-hidden="true"
@@ -1982,15 +1981,15 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
-                  <a href="blog (1).html#no20">
+                  <p>Ni Nengah Sri Monika Yanthi 21</p>
+                  <a href="blog (1).html#no19">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
                       data-bs-dismiss="modal"
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -2027,7 +2026,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ni Putu Biyan Kartika 22</p>
                   <a href="blog (1).html#no21">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -2035,7 +2034,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -2072,7 +2071,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ni Putu Yunianti 23</p>
                   <a href="blog (1).html#no22">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -2080,7 +2079,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -2117,7 +2116,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Ni Wayan Cristina Nita Rianti 24</p>
                   <a href="blog (1).html#no23">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -2125,7 +2124,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -2162,7 +2161,7 @@
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
-                  <p>Gede Sugiarta 01</p>
+                  <p>Pandde Wayan Restu Aditya 24</p>
                   <a href="blog (1).html#no24">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
@@ -2170,7 +2169,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -2215,7 +2214,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
@@ -2260,7 +2259,7 @@
                       type="button"
                       style="color: white"
                     >
-                      Close Project
+                      Project
                     </button>
                   </a>
                 </div>
