--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/05.jpg"
+                  src="assets/img/portfolio/5.jpg"
                   alt="..."
                 />
               </a>
@@ -310,7 +310,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/1.jpg"
+                  src="assets/img/portfolio/07.jpg"
                   alt="..."
                 />
               </a>
@@ -337,7 +337,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/2.jpg"
+                  src="assets/img/portfolio/08.jpg"
                   alt="..."
                 />
               </a>
@@ -418,7 +418,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/5.jpg"
+                  src="assets/img/portfolio/11.jpg"
                   alt="..."
                 />
               </a>
@@ -473,7 +473,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/1.jpg"
+                  src="assets/img/portfolio/13.jpeg"
                   alt="..."
                 />
               </a>
@@ -500,7 +500,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/2.jpg"
+                  src="assets/img/portfolio/14.png"
                   alt="..."
                 />
               </a>
@@ -554,7 +554,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/4.jpg"
+                  src="assets/img/portfolio/17.png"
                   alt="..."
                 />
               </a>
@@ -581,7 +581,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/5.jpg"
+                  src="assets/img/portfolio/18.jpg"
                   alt="..."
                 />
               </a>
@@ -635,7 +635,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/1.jpg"
+                  src="assets/img/portfolio/20.png"
                   alt="..."
                 />
               </a>
@@ -1303,7 +1303,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/05.jpg"
+                    src="assets/img/portfolio/5.jpg"
                     alt="..."
                   />
                   <p>Kadek Bintang Januarta 05</p>
@@ -1393,7 +1393,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/07.jpg"
                     alt="..."
                   />
                   <p>Kadek Canda Pratiwi 07</p>
@@ -1438,7 +1438,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/08.jpg"
                     alt="..."
                   />
                   <p>Kadek Devi Meinesa 08</p>
@@ -1573,7 +1573,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/11.jpg"
                     alt="..."
                   />
                   <p>Ketut Budi Arta Ningsih 11</p>
@@ -1663,7 +1663,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/13.jpeg"
                     alt="..."
                   />
                   <p>Komang Puja Putri Gayatri 13</p>
@@ -1708,7 +1708,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/14.png"
                     alt="..."
                   />
                   <p>Komang Sutini 14</p>
@@ -1798,7 +1798,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/17.png"
                     alt="..."
                   />
                   <p>Ni Kadek Indah Mahayoni 17</p>
@@ -1843,7 +1843,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/18.jpg"
                     alt="..."
                   />
                   <p>Ni Ketut Wardani 18</p>
@@ -1933,7 +1933,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/20.png"
                     alt="..."
                   />
                   <p>Ni Made Yuli 20</p>
