--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/3.jpg"
+                  src="assets/img/portfolio/03.jpg"
                   alt="..."
                 />
               </a>
@@ -445,7 +445,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/6.jpg"
+                  src="assets/img/portfolio/12.png"
                   alt="..."
                 />
               </a>
@@ -662,7 +662,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/2.jpg"
+                  src="assets/img/portfolio/21.png"
                   alt="..."
                 />
               </a>
@@ -770,7 +770,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/6.jpg"
+                  src="assets/img/portfolio/25.jpg"
                   alt="..."
                 />
               </a>
@@ -1213,7 +1213,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/3.jpg"
+                    src="assets/img/portfolio/03.jpg"
                     alt="..."
                   />
                   <p>I Gede Eva Suardana 03</p>
@@ -1618,7 +1618,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/12.png"
                     alt="..."
                   />
                   <p>Komang Arsina 12</p>
@@ -1978,11 +1978,11 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/21.png"
                     alt="..."
                   />
                   <p>Ni Nengah Sri Monika Yanthi 21</p>
-                  <a href="blog (1).html#no19">
+                  <a href="blog (1).html#no20">
                     <button
                       class="btn btn-primary btn-xl text-uppercase"
                       data-bs-dismiss="modal"
@@ -2113,7 +2113,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/22.jpg"
                     alt="..."
                   />
                   <p>Ni Wayan Cristina Nita Rianti 24</p>
@@ -2158,7 +2158,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/25.jpg"
                     alt="..."
                   />
                   <p>Pandde Wayan Restu Aditya 24</p>
