--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="my-3">Web Responsive</h4>
             <p class="text-muted">
@@ -100,7 +100,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-solid fa-palette fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="my-3">Desain colorfull</h4>
             <p class="text-muted">
@@ -111,7 +111,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-solid fa-newspaper fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="my-3">Actual Report</h4>
             <p class="text-muted">
@@ -147,7 +147,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/1.jpg"
+                  src="assets/img/portfolio/01.jpg"
                   alt="..."
                 />
               </a>
@@ -228,7 +228,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/4.jpg"
+                  src="assets/img/portfolio/04.jpg"
                   alt="..."
                 />
               </a>
@@ -255,7 +255,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/5.jpg"
+                  src="assets/img/portfolio/05.jpg"
                   alt="..."
                 />
               </a>
@@ -282,7 +282,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/6.jpg"
+                  src="assets/img/portfolio/06.jpg"
                   alt="..."
                 />
               </a>
@@ -391,7 +391,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/4.jpg"
+                  src="assets/img/portfolio/10.jpg"
                   alt="..."
                 />
               </a>
@@ -608,7 +608,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/6.jpg"
+                  src="assets/img/portfolio/19.jpg"
                   alt="..."
                 />
               </a>
@@ -716,7 +716,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/4.jpg"
+                  src="assets/img/portfolio/23.png"
                   alt="..."
                 />
               </a>
@@ -1123,7 +1123,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/01.jpg"
                     alt="..."
                   />
                   <p>Gede Sugiarta 01</p>
@@ -1258,7 +1258,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/4.jpg"
+                    src="assets/img/portfolio/04.jpg"
                     alt="..."
                   />
                   <p>I Gede Putra Sandya Yudha 04</p>
@@ -1303,7 +1303,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/5.jpg"
+                    src="assets/img/portfolio/05.jpg"
                     alt="..."
                   />
                   <p>Kadek Bintang Januarta 05</p>
@@ -1348,7 +1348,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/6.jpg"
+                    src="assets/img/portfolio/06.jpg"
                     alt="..."
                   />
                   <p>Kadek Budi Syarsi 06</p>
@@ -1528,7 +1528,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/10.jpg"
                     alt="..."
                   />
                   <p>Kadek Widiastini 10</p>
@@ -1888,7 +1888,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/19.jpg"
                     alt="..."
                   />
                   <p>Ni Made Puspa Darmayanti 19</p>
@@ -2068,7 +2068,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/23.png"
                     alt="..."
                   />
                   <p>Ni Putu Yunianti 23</p>
