--- a/blog (1).html
+++ b/blog (1).html
@@ -208,26 +208,7 @@
               />
             </figure>
             <!-- Post content-->
-            <section class="mb-5">
-              <p class="fs-5 mb-4">
-                Science is an enterprise that should be cherished as an activity
-                of the free human mind. Because it transforms who we are, how we
-                live, and it gives us an understanding of our place in the
-                universe.
-              </p>
-              <p class="fs-5 mb-4">
-                The universe is large and old, and the ingredients for life as
-                we know it are everywhere, so there's no reason to think that
-                Earth would be unique in that regard. Whether of not the life
-                became intelligent is a different question, and we'll see if we
-                find that.
-              </p>
-              <p class="fs-5 mb-4">
-                If you get asteroids about a kilometer in size, those are large
-                enough and carry enough energy into our system to disrupt
-                transportation, communication, the food chains, and that can be
-                a really bad day on Earth.
-              </p>
+            <!-- <section class="mb-5">
               <h2 class="fw-bolder mb-4 mt-5">
                 I have odd cosmic thoughts every day
               </h2>
@@ -243,7 +224,7 @@
                 water. It's bone dry today. Something bad happened there as
                 well.
               </p>
-            </section>
+            </section> -->
           </article>
           <!-- no 3 -->
           <article id="no3">
@@ -365,7 +346,7 @@
             <figure class="mb-4">
               <img
                 class="img-fluid rounded"
-                src="assets/img/classico.jpeg"
+                src="assets/img/portfolio/A04.jpg"
                 alt="..."
               />
             </figure>
@@ -880,45 +861,21 @@
             <figure class="mb-4">
               <img
                 class="img-fluid rounded"
-                src="assets/img/classico.jpeg"
+                src="assets/img/portfolio/A09.jpg"
                 alt="..."
               />
             </figure>
             <!-- Post content-->
             <section class="mb-5">
-              <p class="fs-5 mb-4">
-                Science is an enterprise that should be cherished as an activity
-                of the free human mind. Because it transforms who we are, how we
-                live, and it gives us an understanding of our place in the
-                universe.
-              </p>
-              <p class="fs-5 mb-4">
-                The universe is large and old, and the ingredients for life as
-                we know it are everywhere, so there's no reason to think that
-                Earth would be unique in that regard. Whether of not the life
-                became intelligent is a different question, and we'll see if we
-                find that.
-              </p>
-              <p class="fs-5 mb-4">
-                If you get asteroids about a kilometer in size, those are large
-                enough and carry enough energy into our system to disrupt
-                transportation, communication, the food chains, and that can be
-                a really bad day on Earth.
-              </p>
               <h2 class="fw-bolder mb-4 mt-5">
-                I have odd cosmic thoughts every day
+                Artikel Agama Hindu hari raya Saraswati
               </h2>
               <p class="fs-5 mb-4">
-                For me, the most fascinating interface is Twitter. I have odd
-                cosmic thoughts every day and I realized I could hold them to
-                myself or share them with people who might be interested.
-              </p>
-              <p class="fs-5 mb-4">
-                Venus has a runaway greenhouse effect. I kind of want to know
-                what happened there because we're twirling knobs here on Earth
-                without knowing the consequences of it. Mars once had running
-                water. It's bone dry today. Something bad happened there as
-                well.
+                Perayaan hari raya Saraswati di SMA Negeri Bali Mandara perayaan
+                ini di laksanakan pada hari Sabtu tumpek watu gunung. Yang di
+                mana semua siswa di SMA Negeri Bali Mandara melakukan
+                persembahyangan bersama sebagai ungkapan rasa syukur kepada Dewi
+                Saraswati, Dewi pengetahuan.
               </p>
             </section>
           </article>
@@ -3141,8 +3098,7 @@
                     </p>
                   </ul>
                 </li>
-
-               
+              </ol>
             </section>
           </article>
 
@@ -3199,7 +3155,13 @@
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">
-          Copyright &copy; Your Website 2023
+          Copyright &copy; CLASSICO-Z 2024
+        </p>
+        <p class="m-0 text-center text-white">
+          Copyright &copy;
+          <a href="https://www.instagram.com/whyuchyna/"
+            >Wahyu Cahyana Device</a
+          >
         </p>
       </div>
     </footer>
