--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="text-center">
           <h2 class="section-heading text-uppercase">Keunikan Website</h2>
           <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
+            "Learn Today Lead Tomorrow"
           </h3>
         </div>
         <div class="row text-center">
@@ -154,7 +154,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">SUGIARTA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Illustration
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">SUINDRIA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Graphic Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -208,7 +208,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">DEVA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Identity
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -235,7 +235,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">SANDYA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Branding
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -262,7 +262,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">BINTANG</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Website Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -289,7 +289,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">DESYA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Photography
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -317,7 +317,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">CANDA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Illustration
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -344,7 +344,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">DEVI</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Graphic Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -364,14 +364,14 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/3.jpg"
+                  src="assets/img/portfolio/09.jpg"
                   alt="..."
                 />
               </a>
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">RISKI</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Identity
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -398,7 +398,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">WIDIA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Branding
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -425,7 +425,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">ARTA NINGSIH</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Website Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -452,7 +452,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">ARSINA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Photography
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -480,7 +480,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">PUJA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Illustration
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -507,7 +507,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">SUTINI</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Graphic Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -534,7 +534,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">EVA APRILIANI</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Identity
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -561,7 +561,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">INDAH</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Branding
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -588,7 +588,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">WARDANI</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Website Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -615,7 +615,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">PUSPA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Photography
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -642,7 +642,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">YULI</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Illustration
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -669,7 +669,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">MONIKA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Graphic Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -696,7 +696,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">BIYAN</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Identity
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -723,7 +723,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">YUNI</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Branding
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -750,7 +750,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">NITA RIANTI</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Website Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -777,7 +777,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">PANDE</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Photography
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -804,7 +804,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">AGUS SUMERTA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Illustration
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -831,7 +831,7 @@
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">DESTA</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Graphic Design
+                  "science whith morality"
                 </div>
               </div>
             </div>
@@ -1067,7 +1067,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-4 text-lg-start">
-            Copyright &copy; Classico-Z 2023
+            Copyright &copy; Classico-Z 2024
           </div>
           <div class="col-lg-4 my-3 my-lg-0">
             <a
@@ -1093,7 +1093,11 @@
             <a class="link-dark text-decoration-none me-3" href="#!"
               >Privacy Policy</a
             >
-            <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+            <a
+              class="link-dark text-decoration-none"
+              href="https://www.instagram.com/whyuchyna/"
+              >Support By Wahyu Cahyana</a
+            >
           </div>
         </div>
       </div>
@@ -1483,7 +1487,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="assets/img/portfolio/1.jpg"
+                    src="assets/img/portfolio/09.jpg"
                     alt="..."
                   />
                   <p>Kadek Riski 09</p>
